# chord-progression-parser

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  TODO.md  bun.lockb  cspell.json  generated.types.d.ts  generatedTypes.ts  lefthook.yml  package.json  tsconfig.tsbuildinfo
.github/: dependabot.yml
.github/workflows/: check-not-broken.yml  dependabot-auto-merge.yml  release-if-version-changed.yml  release-to-crates-io.yml  release-to-github.yml  release-to-npm.yml  tag-if-version-change.yml  tag-if-version-changed.yml  test-and-release.yml
_docs/en/: about-chord-progression-syntax.md  how-to-develop.md  memo.md
_docs/ja/: abount-chord-progression-syntax.md  about-chord-progression-syntax.md  how-to-develop.md  memo.md
_tools/: find_files_include_multibyte_characters.sh
_tools/chord-progression-generator/: README.md  bun.lockb  package.json  tsconfig.json
e2e-test/bundler/: .gitignore  README.md  bun.lockb  package.json  playwright.config.ts
e2e-test/client/: index.html  package.json
e2e-test/node/: README.md  bun.lockb  package.json  tsconfig.tsbuildinfo
e2e-test/server/: README.md
e2e-test/web/: .gitignore  bun.lockb  generated-src.spec.ts  original.index.html  package.json  playwright.config.ts
resources/: additionalType.ts.txt  error_code_message_map.spec.ts  error_code_message_map.ts  error_code_message_map.util.ts  generatedTypes.ts
src/: error_code.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/lexer/: lexer.rs  types.rs  util.rs
src/parser/: mod.rs  parse_code.rs  types.rs  (+2 more)
test/: bun.lockb  package.json
(+49 files in other folders)
