[package]
name = "chord-progression-parser"
version = "0.1.1"
authors = ["lainNao"]
edition = "2021"
license = "MIT"
description = "a converter from chord progression strings to AST"
repository = "https://github.com/lainNao/chord-progression-parser"
readme = "README.md"
keywords = ["music", "chord-progression", "parser", "AST"]

[dependencies]
regex = "1.9.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
wasm-bindgen-test = "0.3.38"
typeshare = "1.0.1"
serde-wasm-bindgen = "0.6.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
